--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "python-dateutil (>=2.9.0.post0,<3.0.0)",
   "psycopg[binary] (>=3.2.7,<4.0.0)",
   "azure-identity (>=1.23.0,<2.0.0)",
+  "mesh-client (>=3.2.3,<4.0.0)",
 ]
 
 [tool.poetry]
