--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
   "psycopg[binary] (>=3.2.7,<4.0.0)",
   "azure-identity (>=1.23.0,<2.0.0)",
   "mesh-client (>=3.2.3,<4.0.0)",
+  "azure-storage-blob (>=12.25.1,<13.0.0)",
+  "pandas (>=2.3.0,<3.0.0)",
 ]
 
 [tool.poetry]
