--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
   "python-dateutil (>=2.9.0.post0,<3.0.0)",
   "psycopg[binary] (>=3.2.7,<4.0.0)",
   "azure-identity (>=1.23.0,<2.0.0)",
+  "azure-storage-blob (>=12.19.0,<13.0.0)",
+  "requests (>=2.31.0,<3.0.0)",
 ]
 
 [tool.poetry]
