--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ axe-playwright-python = "^0.1.5"
 ruff = "^0.12.2"
 django-debug-toolbar = "^5.2.0"
 django-diagram = "^0.0.1"
+requests-mock = "^1.12.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
