--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
   "azure-identity (>=1.23.0,<2.0.0)",
   "mesh-client (>=3.2.3,<4.0.0)",
   "requests-mock (>=1.12.1,<2.0.0)",
+  "flask (>=3.1.1,<4.0.0)",
+  "jsonschema (>=4.24.0,<5.0.0)",
 ]
 
 [tool.poetry]
