Use memory store for MESH sandbox
This allows us to write and read data in memory.

--- a/manage_breast_screening/notifications/compose.yml
+++ b/manage_breast_screening/notifications/compose.yml
@@ -28,6 +28,7 @@ services:
       - SHARED_KEY=TestKey
       - SSL=no
       - AUTH_MODE=none
-      - STORE_MODE=canned
+      - STORE_MODE=memory
     volumes:
       - ./store/mailboxes.jsonl:/app/mesh_sandbox/store/data/mailboxes.jsonl:ro
+      - ./store/workflows.jsonl:/app/mesh_sandbox/store/data/workflows.jsonl:ro
