add pytest config for vscode
because we already have recommended settings for
vscode, these settings need to be part of the file
in order for pytest to work in the UI. Alternative
is to be less opinionated and gitignore this file.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "MD013": false,
     "MD024": { "siblings_only": true },
     "MD033": false
-  }
+  },
+  "python.testing.pytestArgs": [
+    "."
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
