--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "azure-storage-blob (>=12.25.1,<13.0.0)",
   "pandas (>=2.3.0,<3.0.0)",
   "azure-storage-queue (>=12.13.0,<13.0.0)",
+  "pyyaml (>=6.0.2,<7.0.0)",
 ]
 
 [tool.poetry]
